[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Player/heart.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet/HealthCrate.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/Weapon/ammo_pickup.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 11.2189

[sub_resource type="Animation" id=2]
resource_name = "heart_pulse"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.03, 0.03 ), Vector2( 0.06, 0.06 ), Vector2( 0.03, 0.03 ), Vector2( 0.06, 0.06 ), Vector2( 0.03, 0.03 ) ]
}

[node name="HealthCrate" type="Area2D"]
z_index = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.222725, -0.779535 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.615686, 0.192157, 0.192157, 1 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 1 )

[node name="PickUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/heart_pulse = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_HealthCrate_body_entered"]
[connection signal="finished" from="PickUpSound" to="." method="_on_PickUpSound_finished"]
